--- a/site/index.html
+++ b/site/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Coursera Test Page</title>
   </head>
   <body>
     <h1>Test</h1>
   </body>
-</html>    
+</html>
